Restored comments in core

--- a/scratch/hilbert_paths.ipynb
+++ b/scratch/hilbert_paths.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T15:21:06.004000-04:00",
-     "start_time": "2018-04-04T19:21:05.558Z"
+     "end_time": "2018-04-04T23:13:19.987000-04:00",
+     "start_time": "2018-04-05T03:13:17.564Z"
     }
    },
    "outputs": [],
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T15:56:41.758000-04:00",
-     "start_time": "2018-04-04T19:56:37.734Z"
+     "end_time": "2018-04-04T23:13:20.867000-04:00",
+     "start_time": "2018-04-05T03:13:17.686Z"
     }
    },
    "outputs": [],
@@ -32,37 +32,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T15:56:42.146000-04:00",
-     "start_time": "2018-04-04T19:56:37.834Z"
+     "end_time": "2018-04-04T23:13:27.902000-04:00",
+     "start_time": "2018-04-05T03:13:27.900Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "hilbert_paths (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# first, how to generate...\n",
-    "include(\"../src/core.jl\")\n"
+    "#using M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T15:56:42.596000-04:00",
-     "start_time": "2018-04-04T19:56:41.662Z"
+     "end_time": "2018-04-04T23:13:29.740000-04:00",
+     "start_time": "2018-04-05T03:13:29.362Z"
     }
    },
    "outputs": [],
@@ -90,15 +79,15 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T15:25:59.617000-04:00",
-     "start_time": "2018-04-04T19:25:59.438Z"
+     "end_time": "2018-04-04T23:13:31.325000-04:00",
+     "start_time": "2018-04-05T03:13:31.026Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "false"
+       "R1 (generic function with 1 method)"
       ]
      },
      "execution_count": 5,
@@ -112,28 +101,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-26T23:47:18.370000-04:00",
-     "start_time": "2018-03-27T03:47:18.158Z"
+     "end_time": "2018-04-04T23:13:34.069000-04:00",
+     "start_time": "2018-04-05T03:13:33.590Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(true, false, true, true)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: p1 not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: p1 not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
+     ]
     }
    ],
    "source": [
     "p1 == p1, p2 == p1, p3 == p1, isequal(p1, p3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
