--- a/scratch/check_calc.ipynb
+++ b/scratch/check_calc.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:09.063000-04:00",
-     "start_time": "2018-04-05T02:55:06.840Z"
+     "end_time": "2018-04-04T23:13:43.539000-04:00",
+     "start_time": "2018-04-05T03:13:40.908Z"
     }
    },
    "outputs": [],
@@ -19,8 +19,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:09.080000-04:00",
-     "start_time": "2018-04-05T02:55:06.844Z"
+     "end_time": "2018-04-04T23:13:43.559000-04:00",
+     "start_time": "2018-04-05T03:13:41.056Z"
     }
    },
    "outputs": [],
@@ -33,29 +33,11 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:00:28.036000-04:00",
-     "start_time": "2018-04-05T03:00:20.972Z"
+     "end_time": "2018-04-04T23:17:22.231000-04:00",
+     "start_time": "2018-04-05T03:17:14.842Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "LoadError: LoadError: \u001b[91mUndefVarError: T not defined\u001b[39m\nwhile loading C:\\work\\src\\Mbo\\src\\core.jl, in expression starting on line 14\nwhile loading C:\\work\\src\\Mbo\\src\\Mbo.jl, in expression starting on line 11",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: LoadError: \u001b[91mUndefVarError: T not defined\u001b[39m\nwhile loading C:\\work\\src\\Mbo\\src\\core.jl, in expression starting on line 14\nwhile loading C:\\work\\src\\Mbo\\src\\Mbo.jl, in expression starting on line 11",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_from_node1\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:569\u001b[22m\u001b[22m",
-      " [2] \u001b[1minclude\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\sysimg.jl:14\u001b[22m\u001b[22m",
-      " [3] \u001b[1minclude_from_node1\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:569\u001b[22m\u001b[22m",
-      " [4] \u001b[1meval\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Module, ::Any\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\boot.jl:235\u001b[22m\u001b[22m",
-      " [5] \u001b[1m_require\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:483\u001b[22m\u001b[22m",
-      " [6] \u001b[1mrequire\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:398\u001b[22m\u001b[22m",
-      " [7] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Mbo\n",
     "#include(\"../src\\\\core.jl\")"
@@ -63,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:10.286000-04:00",
-     "start_time": "2018-04-05T02:55:06.852Z"
+     "end_time": "2018-04-04T23:17:22.620000-04:00",
+     "start_time": "2018-04-05T03:17:14.980Z"
     }
    },
    "outputs": [
@@ -77,7 +59,7 @@
        "Mbo.TimeGrid"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:10.287000-04:00",
-     "start_time": "2018-04-05T02:55:06.854Z"
+     "end_time": "2018-04-04T23:17:22.623000-04:00",
+     "start_time": "2018-04-05T03:17:15.090Z"
     }
    },
    "outputs": [],
@@ -102,11 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:12.939000-04:00",
-     "start_time": "2018-04-05T02:55:06.856Z"
+     "end_time": "2018-04-04T23:17:25.323000-04:00",
+     "start_time": "2018-04-05T03:17:15.200Z"
     }
    },
    "outputs": [],
@@ -118,22 +100,22 @@
     "wframe = 1\n",
     "wa = 1-wframe\n",
     "const gamma = 0.135\n",
-    "g(t) = g_homo(t, gamma)\n",
+    "g_(t) = g_homo(t, gamma)\n",
     "\n",
     "sig_org = R1.(reshape(t1_g, (n, 1, 1)),\n",
     "                  reshape(t2_g, (1, n, 1)),\n",
     "                  reshape(t3_g, (1, 1, n)),\n",
     "                  wa, 0, wa,\n",
-    "                  g, zero, g, zero, g, zero);"
+    "                  g_, zero, g_, zero, g_, zero);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:13.258000-04:00",
-     "start_time": "2018-04-05T02:55:06.862Z"
+     "end_time": "2018-04-04T23:17:25.662000-04:00",
+     "start_time": "2018-04-05T03:17:17.196Z"
     }
    },
    "outputs": [],
@@ -145,7 +127,7 @@
     "for a in states(s), b in states(s)\n",
     "    dipole!(s, a, b, 1)\n",
     "end\n",
-    "lineshape!(s, \"A\", \"A\", g)\n",
+    "lineshape!(s, \"A\", \"A\", g_)\n",
     "lineshape!(s, \"G\", \"G\", zero)\n",
     "lineshape!(s, \"G\", \"A\", zero)\n",
     "lineshape!(s, \"A\", \"G\", zero)\n",
@@ -158,27 +140,20 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:14.730000-04:00",
-     "start_time": "2018-04-05T02:55:06.866Z"
+     "end_time": "2018-04-04T23:17:46.211000-04:00",
+     "start_time": "2018-04-05T03:17:46.058Z"
     }
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching endof(::Mbo.HilbertPath{5})\u001b[0m\nClosest candidates are:\n  endof(\u001b[91m::SimpleVector\u001b[39m) at essentials.jl:257\n  endof(\u001b[91m::Char\u001b[39m) at char.jl:18\n  endof(\u001b[91m::String\u001b[39m) at strings/string.jl:153\n  ...\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mMethodError: no method matching endof(::Mbo.HilbertPath{5})\u001b[0m\nClosest candidates are:\n  endof(\u001b[91m::SimpleVector\u001b[39m) at essentials.jl:257\n  endof(\u001b[91m::Char\u001b[39m) at char.jl:18\n  endof(\u001b[91m::String\u001b[39m) at strings/string.jl:153\n  ...\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1mcheck_channel_state\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Channel{Any}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\channels.jl:131\u001b[22m\u001b[22m",
-      " [2] \u001b[1mtake_unbuffered\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Channel{Any}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\channels.jl:329\u001b[22m\u001b[22m",
-      " [3] \u001b[1mtake!\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Channel{Any}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\channels.jl:317\u001b[22m\u001b[22m",
-      " [4] \u001b[1mdone\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Channel{Any}, ::Base.ChannelIterState{Any}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\channels.jl:406\u001b[22m\u001b[22m",
-      " [5] \u001b[1m_collect\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::UnitRange{Int64}, ::Channel{Any}, ::Base.HasEltype, ::Base.SizeUnknown\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\array.jl:408\u001b[22m\u001b[22m",
-      " [6] \u001b[1mcollect\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Channel{Any}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\array.jl:397\u001b[22m\u001b[22m",
-      " [7] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
+     "data": {
+      "text/plain": [
+       "HilbertPath{5}(\"G\", \"A\", \"G\", \"A\", \"G\")"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -187,82 +162,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:56:35.894000-04:00",
-     "start_time": "2018-04-05T02:56:35.890Z"
+     "end_time": "2018-04-04T23:17:47.145000-04:00",
+     "start_time": "2018-04-05T03:17:46.922Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Channel{Any}(sz_max:0,sz_curr:0)"
+       "(1.0, 1.0, 1.0, 1.0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c = hilbert_paths(s, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-04T22:58:42.413000-04:00",
-     "start_time": "2018-04-05T02:58:42.380Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching endof(::Mbo.HilbertPath{5})\u001b[0m\nClosest candidates are:\n  endof(\u001b[91m::SimpleVector\u001b[39m) at essentials.jl:257\n  endof(\u001b[91m::Char\u001b[39m) at char.jl:18\n  endof(\u001b[91m::String\u001b[39m) at strings/string.jl:153\n  ...\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mMethodError: no method matching endof(::Mbo.HilbertPath{5})\u001b[0m\nClosest candidates are:\n  endof(\u001b[91m::SimpleVector\u001b[39m) at essentials.jl:257\n  endof(\u001b[91m::Char\u001b[39m) at char.jl:18\n  endof(\u001b[91m::String\u001b[39m) at strings/string.jl:153\n  ...\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1mcheck_channel_state\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Channel{Any}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\channels.jl:131\u001b[22m\u001b[22m",
-      " [2] \u001b[1mtake_unbuffered\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Channel{Any}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\channels.jl:329\u001b[22m\u001b[22m",
-      " [3] \u001b[1mtake!\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Channel{Any}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\channels.jl:317\u001b[22m\u001b[22m",
-      " [4] \u001b[1mdone\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Channel{Any}, ::Base.ChannelIterState{Any}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\channels.jl:406\u001b[22m\u001b[22m",
-      " [5] \u001b[1mgrow_to!\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Array{Union{},1}, ::Base.Generator{Channel{Any},##7#8}, ::Base.ChannelIterState{Any}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\array.jl:497\u001b[22m\u001b[22m",
-      " [6] \u001b[1mgrow_to!\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Array{Any,1}, ::Base.Generator{Channel{Any},##7#8}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\array.jl:491\u001b[22m\u001b[22m",
-      " [7] \u001b[1mcollect\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Base.Generator{Channel{Any},##7#8}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\array.jl:435\u001b[22m\u001b[22m",
-      " [8] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
-    }
-   ],
-   "source": [
-    "[i for i in c]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:14.800000-04:00",
-     "start_time": "2018-04-05T02:55:06.876Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: p not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: p not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
     }
    ],
    "source": [
@@ -274,21 +190,20 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:14.805000-04:00",
-     "start_time": "2018-04-05T02:55:06.882Z"
+     "end_time": "2018-04-04T23:17:48.666000-04:00",
+     "start_time": "2018-04-05T03:17:48.460Z"
     }
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: p not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: p not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
+     "data": {
+      "text/plain": [
+       "(g_, zero, g_, zero, g_, zero)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -300,21 +215,20 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:14.812000-04:00",
-     "start_time": "2018-04-05T02:55:06.884Z"
+     "end_time": "2018-04-04T23:17:50.834000-04:00",
+     "start_time": "2018-04-05T03:17:50.508Z"
     }
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: p not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: p not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -327,28 +241,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:14.816000-04:00",
-     "start_time": "2018-04-05T02:55:06.886Z"
+     "end_time": "2018-04-04T23:18:40.896000-04:00",
+     "start_time": "2018-04-05T03:18:40.548Z"
     }
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: p not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: p not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
+     "data": {
+      "text/plain": [
+       "20×1×1 Array{Float64,3}:\n",
+       "[:, :, 1] =\n",
+       "   0.0   \n",
+       "  10.5263\n",
+       "  21.0526\n",
+       "  31.5789\n",
+       "  42.1053\n",
+       "  52.6316\n",
+       "  63.1579\n",
+       "  73.6842\n",
+       "  84.2105\n",
+       "  94.7368\n",
+       " 105.263 \n",
+       " 115.789 \n",
+       " 126.316 \n",
+       " 136.842 \n",
+       " 147.368 \n",
+       " 157.895 \n",
+       " 168.421 \n",
+       " 178.947 \n",
+       " 189.474 \n",
+       " 200.0   "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "R1(grd, energy(s,p), lineshape(s, p)) == sig_org"
+    "grid(grd)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-04T23:20:01.095000-04:00",
+     "start_time": "2018-04-05T03:20:00.908Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0 - 0.0im"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R1(0,0,0, energy(s,p), lineshape(s, p))"
    ]
   },
   {
