Using R1 seems to work now.

--- a/scratch/check_calc.ipynb
+++ b/scratch/check_calc.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:13:43.539000-04:00",
-     "start_time": "2018-04-05T03:13:40.908Z"
+     "end_time": "2018-04-09T22:01:21.992000-04:00",
+     "start_time": "2018-04-10T02:01:21.466Z"
     }
    },
    "outputs": [],
@@ -19,8 +19,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:13:43.559000-04:00",
-     "start_time": "2018-04-05T03:13:41.056Z"
+     "end_time": "2018-04-09T22:01:22.013000-04:00",
+     "start_time": "2018-04-10T02:01:21.470Z"
     }
    },
    "outputs": [],
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:17:22.231000-04:00",
-     "start_time": "2018-04-05T03:17:14.842Z"
+     "end_time": "2018-04-09T22:01:22.838000-04:00",
+     "start_time": "2018-04-10T02:01:21.474Z"
     }
    },
    "outputs": [],
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:17:22.620000-04:00",
-     "start_time": "2018-04-05T03:17:14.980Z"
+     "end_time": "2018-04-09T22:01:23.153000-04:00",
+     "start_time": "2018-04-10T02:01:21.482Z"
     }
    },
    "outputs": [
@@ -59,7 +59,7 @@
        "Mbo.TimeGrid"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:17:22.623000-04:00",
-     "start_time": "2018-04-05T03:17:15.090Z"
+     "end_time": "2018-04-09T22:01:23.153000-04:00",
+     "start_time": "2018-04-10T02:01:21.486Z"
     }
    },
    "outputs": [],
@@ -84,11 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:17:25.323000-04:00",
-     "start_time": "2018-04-05T03:17:15.200Z"
+     "end_time": "2018-04-09T22:01:25.694000-04:00",
+     "start_time": "2018-04-10T02:01:21.490Z"
     }
    },
    "outputs": [],
@@ -111,11 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:17:25.662000-04:00",
-     "start_time": "2018-04-05T03:17:17.196Z"
+     "end_time": "2018-04-09T22:01:26.004000-04:00",
+     "start_time": "2018-04-10T02:01:21.492Z"
     }
    },
    "outputs": [],
@@ -140,8 +140,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:17:46.211000-04:00",
-     "start_time": "2018-04-05T03:17:46.058Z"
+     "end_time": "2018-04-09T22:01:26.652000-04:00",
+     "start_time": "2018-04-10T02:01:21.498Z"
     }
    },
    "outputs": [
@@ -165,8 +165,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:17:47.145000-04:00",
-     "start_time": "2018-04-05T03:17:46.922Z"
+     "end_time": "2018-04-09T22:01:26.899000-04:00",
+     "start_time": "2018-04-10T02:01:21.502Z"
     }
    },
    "outputs": [
@@ -190,8 +190,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:17:48.666000-04:00",
-     "start_time": "2018-04-05T03:17:48.460Z"
+     "end_time": "2018-04-09T22:01:27.117000-04:00",
+     "start_time": "2018-04-10T02:01:21.506Z"
     }
    },
    "outputs": [
@@ -215,8 +215,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:17:50.834000-04:00",
-     "start_time": "2018-04-05T03:17:50.508Z"
+     "end_time": "2018-04-09T22:01:27.483000-04:00",
+     "start_time": "2018-04-10T02:01:21.508Z"
     }
    },
    "outputs": [
@@ -241,57 +241,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T23:18:40.896000-04:00",
-     "start_time": "2018-04-05T03:18:40.548Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20×1×1 Array{Float64,3}:\n",
-       "[:, :, 1] =\n",
-       "   0.0   \n",
-       "  10.5263\n",
-       "  21.0526\n",
-       "  31.5789\n",
-       "  42.1053\n",
-       "  52.6316\n",
-       "  63.1579\n",
-       "  73.6842\n",
-       "  84.2105\n",
-       "  94.7368\n",
-       " 105.263 \n",
-       " 115.789 \n",
-       " 126.316 \n",
-       " 136.842 \n",
-       " 147.368 \n",
-       " 157.895 \n",
-       " 168.421 \n",
-       " 178.947 \n",
-       " 189.474 \n",
-       " 200.0   "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid(grd)[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-04T23:20:01.095000-04:00",
-     "start_time": "2018-04-05T03:20:00.908Z"
+     "end_time": "2018-04-09T22:01:27.677000-04:00",
+     "start_time": "2018-04-10T02:01:21.512Z"
     }
    },
    "outputs": [
@@ -301,7 +255,7 @@
        "1.0 - 0.0im"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,21 +269,20 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:14.821000-04:00",
-     "start_time": "2018-04-05T02:55:06.888Z"
+     "end_time": "2018-04-09T22:01:28.083000-04:00",
+     "start_time": "2018-04-10T02:01:21.516Z"
     }
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: p not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: p not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -341,21 +294,20 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:14.858000-04:00",
-     "start_time": "2018-04-05T02:55:06.892Z"
+     "end_time": "2018-04-09T22:01:31.224000-04:00",
+     "start_time": "2018-04-10T02:01:31.022Z"
     }
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching R1(::Mbo.TimeGrid{Float64,3}, ::Mbo.System)\u001b[0m\nClosest candidates are:\n  R1(::Mbo.TimeGrid{#s5,3} where #s5<:Real, ::Mbo.System, \u001b[91m::Mbo.HilbertPath{5}\u001b[39m) at C:\\work\\src\\Mbo\\src\\core.jl:6\n  R1(::Mbo.TimeGrid{#s5,3} where #s5<:Real, ::Any, \u001b[91m::Any\u001b[39m) at C:\\work\\src\\Mbo\\src\\core.jl:14\n  R1(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Tuple{Real,Real,Real}\u001b[39m, \u001b[91m::NTuple{6,Function}\u001b[39m) at C:\\work\\src\\Mbo\\src\\core.jl:13\n  ...\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mMethodError: no method matching R1(::Mbo.TimeGrid{Float64,3}, ::Mbo.System)\u001b[0m\nClosest candidates are:\n  R1(::Mbo.TimeGrid{#s5,3} where #s5<:Real, ::Mbo.System, \u001b[91m::Mbo.HilbertPath{5}\u001b[39m) at C:\\work\\src\\Mbo\\src\\core.jl:6\n  R1(::Mbo.TimeGrid{#s5,3} where #s5<:Real, ::Any, \u001b[91m::Any\u001b[39m) at C:\\work\\src\\Mbo\\src\\core.jl:14\n  R1(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Tuple{Real,Real,Real}\u001b[39m, \u001b[91m::NTuple{6,Function}\u001b[39m) at C:\\work\\src\\Mbo\\src\\core.jl:13\n  ...\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -367,21 +319,13 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:14.890000-04:00",
-     "start_time": "2018-04-05T02:55:06.894Z"
+     "end_time": "2018-04-09T22:01:43.154000-04:00",
+     "start_time": "2018-04-10T02:01:43.152Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Method definition R1("
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Mbo.R1(t1, t2, t3, ws::NTuple{3,Real}, ls::NTuple{6,Function}) = R1(t1, t2, t3, ws..., ls...)"
+    "#R1(t1, t2, t3, ws::NTuple{3,Real}, ls::NTuple{6,Function}) = R1(t1, t2, t3, ws..., ls...)"
    ]
   },
   {
@@ -389,28 +333,20 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:14.894000-04:00",
-     "start_time": "2018-04-05T02:55:06.896Z"
+     "end_time": "2018-04-09T22:01:44.394000-04:00",
+     "start_time": "2018-04-10T02:01:44.386Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Any, Any, Any, Tuple{Real"
-     ]
-    },
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: p not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: p not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
+     "data": {
+      "text/plain": [
+       "1.0 - 0.0im"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -435,9 +371,7 @@
      ]
     }
    ],
-   "source": [
-    "Mbo.R1(g::TimeGrid{<:Real,3}, ws, ls) = R1.(grid(g)..., ws, ls)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
