Dispatch chain setup for all response.

--- a/scratch/check_calc.ipynb
+++ b/scratch/check_calc.ipynb
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:22.838000-04:00",
-     "start_time": "2018-04-10T02:01:21.474Z"
+     "end_time": "2018-04-09T22:13:23.342000-04:00",
+     "start_time": "2018-04-10T02:13:22.540Z"
     }
    },
    "outputs": [],
@@ -45,36 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:23.153000-04:00",
-     "start_time": "2018-04-10T02:01:21.482Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Mbo.TimeGrid"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TimeGrid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:23.153000-04:00",
-     "start_time": "2018-04-10T02:01:21.486Z"
+     "end_time": "2018-04-09T22:13:24.715000-04:00",
+     "start_time": "2018-04-10T02:13:24.712Z"
     }
    },
    "outputs": [],
@@ -84,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:25.694000-04:00",
-     "start_time": "2018-04-10T02:01:21.490Z"
+     "end_time": "2018-04-09T22:13:27.574000-04:00",
+     "start_time": "2018-04-10T02:13:24.976Z"
     }
    },
    "outputs": [],
@@ -111,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:26.004000-04:00",
-     "start_time": "2018-04-10T02:01:21.492Z"
+     "end_time": "2018-04-09T22:13:28.651000-04:00",
+     "start_time": "2018-04-10T02:13:28.356Z"
     }
    },
    "outputs": [],
@@ -137,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:26.652000-04:00",
-     "start_time": "2018-04-10T02:01:21.498Z"
+     "end_time": "2018-04-09T22:13:29.728000-04:00",
+     "start_time": "2018-04-10T02:13:29.130Z"
     }
    },
    "outputs": [
@@ -151,7 +126,7 @@
        "HilbertPath{5}(\"G\", \"A\", \"G\", \"A\", \"G\")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,11 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:26.899000-04:00",
-     "start_time": "2018-04-10T02:01:21.502Z"
+     "end_time": "2018-04-09T22:13:31.279000-04:00",
+     "start_time": "2018-04-10T02:13:31.060Z"
     }
    },
    "outputs": [
@@ -176,7 +151,7 @@
        "(1.0, 1.0, 1.0, 1.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:27.117000-04:00",
-     "start_time": "2018-04-10T02:01:21.506Z"
+     "end_time": "2018-04-09T22:13:31.709000-04:00",
+     "start_time": "2018-04-10T02:13:31.484Z"
     }
    },
    "outputs": [
@@ -201,7 +176,7 @@
        "(g_, zero, g_, zero, g_, zero)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,11 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:27.483000-04:00",
-     "start_time": "2018-04-10T02:01:21.508Z"
+     "end_time": "2018-04-09T22:13:32.337000-04:00",
+     "start_time": "2018-04-10T02:13:32.002Z"
     }
    },
    "outputs": [
@@ -226,7 +201,7 @@
        "true"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,100 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:27.677000-04:00",
-     "start_time": "2018-04-10T02:01:21.512Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0 - 0.0im"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "R1(0,0,0, energy(s,p), lineshape(s, p))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:28.083000-04:00",
-     "start_time": "2018-04-10T02:01:21.516Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "R1(grd, s, p) == sig_org"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:31.224000-04:00",
-     "start_time": "2018-04-10T02:01:31.022Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "R1(grd, s) == sig_org"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:43.154000-04:00",
-     "start_time": "2018-04-10T02:01:43.152Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#R1(t1, t2, t3, ws::NTuple{3,Real}, ls::NTuple{6,Function}) = R1(t1, t2, t3, ws..., ls...)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:01:44.394000-04:00",
-     "start_time": "2018-04-10T02:01:44.386Z"
+     "end_time": "2018-04-09T22:13:34.725000-04:00",
+     "start_time": "2018-04-10T02:13:34.544Z"
     }
    },
    "outputs": [
@@ -350,7 +236,7 @@
     }
    ],
    "source": [
-    "R1(0.0, 0.0, 0.0, energy(s,p), lineshape(s,p))"
+    "R1(0,0,0, energy(s,p), lineshape(s, p))"
    ]
   },
   {
@@ -358,61 +244,216 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:14.897000-04:00",
-     "start_time": "2018-04-05T02:55:06.900Z"
+     "end_time": "2018-04-09T22:13:35.660000-04:00",
+     "start_time": "2018-04-10T02:13:35.294Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ", Real, Real}, Tuple{Function"
-     ]
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "R1(grd, s, p) == sig_org"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-04T22:55:14.905000-04:00",
-     "start_time": "2018-04-05T02:55:06.902Z"
+     "end_time": "2018-04-09T22:13:36.302000-04:00",
+     "start_time": "2018-04-10T02:13:36.096Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ", Function, Function, Function, Function, Function"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R1(grd, s) == sig_org"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-09T22:13:37.428000-04:00",
+     "start_time": "2018-04-10T02:13:37.426Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#R1(t1, t2, t3, ws::NTuple{3,Real}, ls::NTuple{6,Function}) = R1(t1, t2, t3, ws..., ls...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-09T22:13:37.593000-04:00",
+     "start_time": "2018-04-10T02:13:37.584Z"
+    }
+   },
+   "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: p not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: p not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "1.0 - 0.0im"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R1(0.0, 0.0, 0.0, energy(s,p), lineshape(s,p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-04T22:55:14.897000-04:00",
+     "start_time": "2018-04-05T02:55:06.900Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-09T22:13:38.508000-04:00",
+     "start_time": "2018-04-10T02:13:38.500Z"
+    }
+   },
+   "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "}) in module Mbo at C:\\work\\src\\Mbo\\src\\core.jl:13 overwritten in module Main at In[15]:1.\n",
-      "WARNING: Method definition R1(Mbo.TimeGrid{#s12, 3} where #s12<:Real, Any, Any) in module Mbo at C:\\work\\src\\Mbo\\src\\core.jl:14 overwritten in module Main at In[17]:1.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "R1(grd, energy(s,p), lineshape(s,p)) == sig_org"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-09T22:13:39.169000-04:00",
+     "start_time": "2018-04-10T02:13:39.150Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "f(x, y) = x+y\n",
+    "g(x, y) = x-y\n",
+    "for op = (:f,:g)\n",
+    "    @eval begin\n",
+    "        ($op)(x) = ($op)(x, x)\n",
+    "        ($op)(x, y, z) = ($op)(x+y, z)\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-09T22:09:49.480000-04:00",
+     "start_time": "2018-04-10T02:09:48.542Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "3 methods for generic function <b>f</b>:<ul><li> f(x) at In[1]:5</li> <li> f(x, y) at In[1]:1</li> <li> f(x, y, z) at In[1]:6</li> </ul>"
+      ],
+      "text/plain": [
+       "# 3 methods for generic function \"f\":\n",
+       "f(x) in Main at In[1]:5\n",
+       "f(x, y) in Main at In[1]:1\n",
+       "f(x, y, z) in Main at In[1]:6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "methods(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-09T22:21:55.720000-04:00",
+     "start_time": "2018-04-10T02:21:55.718Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using Base.Cartesian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-09T22:12:01.739000-04:00",
+     "start_time": "2018-04-10T02:12:01.674Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mTypeError: Type{...} expression: expected UnionAll, got Symbol\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mTypeError: Type{...} expression: expected UnionAll, got Symbol\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
