Added linear API
Made HilbertPaths of same order sortable

--- a/scratch/check_calc.ipynb
+++ b/scratch/check_calc.ipynb
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:13:23.342000-04:00",
-     "start_time": "2018-04-10T02:13:22.540Z"
+     "end_time": "2018-04-18T17:05:42.944000-04:00",
+     "start_time": "2018-04-18T21:05:41.684Z"
     }
    },
    "outputs": [],
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:13:24.715000-04:00",
-     "start_time": "2018-04-10T02:13:24.712Z"
+     "end_time": "2018-04-18T17:05:42.965000-04:00",
+     "start_time": "2018-04-18T21:05:42.030Z"
     }
    },
    "outputs": [],
@@ -59,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:13:27.574000-04:00",
-     "start_time": "2018-04-10T02:13:24.976Z"
+     "end_time": "2018-04-18T17:05:45.675000-04:00",
+     "start_time": "2018-04-18T21:05:42.386Z"
     }
    },
    "outputs": [],
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:13:28.651000-04:00",
-     "start_time": "2018-04-10T02:13:28.356Z"
+     "end_time": "2018-04-18T17:05:46.004000-04:00",
+     "start_time": "2018-04-18T21:05:44.140Z"
     }
    },
    "outputs": [],
@@ -112,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:13:29.728000-04:00",
-     "start_time": "2018-04-10T02:13:29.130Z"
+     "end_time": "2018-04-18T17:05:46.774000-04:00",
+     "start_time": "2018-04-18T21:05:44.288Z"
     }
    },
    "outputs": [
@@ -126,13 +126,220 @@
        "HilbertPath{5}(\"G\", \"A\", \"G\", \"A\", \"G\")"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p = collect(hilbert_paths(s, 3))[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-18T17:10:01.093000-04:00",
+     "start_time": "2018-04-18T21:10:01.086Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HilbertPath{3}(\"G\", \"A\", \"G\")"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    p1 = HilbertPath(\"G\", \"A\", \"G\")\n",
+    "    p2 = HilbertPath(\"G\", \"A\", \"G\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-18T17:11:16.986000-04:00",
+     "start_time": "2018-04-18T21:11:16.682Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mMethodError: no method matching *(::Tuple{String}, ::Tuple{String})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mMethodError: no method matching *(::Tuple{String}, ::Tuple{String})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1mpower_by_squaring\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Tuple{String}, ::Int64\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\intfuncs.jl:182\u001b[22m\u001b[22m",
+      " [2] \u001b[1mliteral_pow\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Base.#^, ::Tuple{String}, ::Type{Val{3}}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\intfuncs.jl:205\u001b[22m\u001b[22m",
+      " [3] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-18T17:10:21.524000-04:00",
+     "start_time": "2018-04-18T21:10:21.520Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1 == p2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-18T17:09:59.755000-04:00",
+     "start_time": "2018-04-18T21:09:59.588Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Mbo.HilbertPath"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HilbertPath(args::Vararg{String,N}) where {N} = HilbertPath{N}(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-18T17:08:24.890000-04:00",
+     "start_time": "2018-04-18T21:08:24.888Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tuple{String,String,String}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NTuple{3,String}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-18T17:08:25.007000-04:00",
+     "start_time": "2018-04-18T21:08:25.004Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2 methods for generic function <b>HibertPath</b>:<ul><li> HibertPath<i>{N}</i>(args::<b>Tuple{Vararg{String,N}}...</b>) at In[11]:1</li> <li> HibertPath<i>{N}</i>(args::<b>Vararg{String,N}</b>) at In[22]:1</li> </ul>"
+      ],
+      "text/plain": [
+       "# 2 methods for generic function \"HibertPath\":\n",
+       "HibertPath(args::Tuple{Vararg{String,N}}...) where N in Main at In[11]:1\n",
+       "HibertPath(args::Vararg{String,N}) where N in Main at In[22]:1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "methods(HibertPath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-18T17:08:33.224000-04:00",
+     "start_time": "2018-04-18T21:08:33.056Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HibertPath(\"G\", \"A\", \"G\") == HilbertPath((\"G\", \"A\", \"G\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-18T17:06:03.628000-04:00",
+     "start_time": "2018-04-18T21:06:03.452Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HilbertPath{3}(\"G\", \"A\", \"G\")"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HilbertPath((\"G\", \"A\", \"G\"))"
    ]
   },
   {
