--- a/scratch/hilbert_paths.ipynb
+++ b/scratch/hilbert_paths.ipynb
@@ -127,10 +127,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-18T17:20:26.355000-04:00",
+     "start_time": "2018-04-18T21:20:26.350Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Char,Int64} with 5 entries:\n",
+       "  'A' => 2\n",
+       "  'B' => 3\n",
+       "  'G' => 1\n",
+       "  'F' => 5\n",
+       "  'C' => 4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags = \"GABCF\"\n",
+    "Dict(zip(tags, 1:length(tags)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-18T17:27:13.056000-04:00",
+     "start_time": "2018-04-18T21:27:13.020Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Any,Any} with 25 entries:\n",
+       "  ('B', 'C') => 0\n",
+       "  ('C', 'G') => 1\n",
+       "  ('C', 'C') => 0\n",
+       "  ('F', 'A') => 1\n",
+       "  ('A', 'G') => 1\n",
+       "  ('G', 'A') => 1\n",
+       "  ('B', 'G') => 1\n",
+       "  ('C', 'A') => 0\n",
+       "  ('C', 'F') => 1\n",
+       "  ('G', 'C') => 1\n",
+       "  ('B', 'F') => 1\n",
+       "  ('F', 'B') => 1\n",
+       "  ('F', 'C') => 1\n",
+       "  ('A', 'A') => 0\n",
+       "  ('B', 'A') => 0\n",
+       "  ('F', 'G') => 0\n",
+       "  ('G', 'F') => 0\n",
+       "  ('A', 'C') => 0\n",
+       "  ('G', 'B') => 1\n",
+       "  ('A', 'B') => 0\n",
+       "  ('A', 'F') => 1\n",
+       "  ('F', 'F') => 0\n",
+       "  ('G', 'G') => 0\n",
+       "  ('B', 'B') => 0\n",
+       "  ('C', 'B') => 0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dipoles = Dict()\n",
+    "for i=tags, j=tags\n",
+    "    if i==j dipoles[i,j] = 0\n",
+    "    elseif (i in \"GF\" && j in \"GF\") dipoles[i,j] = 0\n",
+    "    elseif (i in \"ABC\" && j in \"ABC\") dipoles[i,j] = 0\n",
+    "        else dipoles[i,j]=1\n",
+    "    end\n",
+    "end\n",
+    "dipoles"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lineshapes = Dict()\n",
+    "for i=tags, j=tags\n",
+    "    \n",
+    "end"
+   ]
   }
  ],
  "metadata": {
