should a working simple example

--- a/scratch/readme_examples.ipynb
+++ b/scratch/readme_examples.ipynb
@@ -89,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-24T16:08:10.576000-04:00",
-     "start_time": "2018-05-24T20:08:10.217Z"
+     "end_time": "2018-05-24T16:25:05.354000-04:00",
+     "start_time": "2018-05-24T20:25:05.346Z"
     }
    },
    "outputs": [
@@ -106,7 +106,10 @@
     }
    ],
    "source": [
+    "# use \"g\" as a ground state with energy 0\n",
     "s = System(\"g\")\n",
+    "@assert \"g\" in states(s)\n",
+    "@assert energy(s, \"g\") == 0\n",
     "# set energies\n",
     "energy!(s, \"x1\", 1.2)\n",
     "energy!(s, \"x2\", 1.4)\n",
