--- a/scratch/check_calc.ipynb
+++ b/scratch/check_calc.ipynb
@@ -33,8 +33,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:05:42.944000-04:00",
-     "start_time": "2018-04-18T21:05:41.684Z"
+     "end_time": "2018-04-29T12:16:01.578000-04:00",
+     "start_time": "2018-04-29T16:16:00.382Z"
     }
    },
    "outputs": [],
@@ -48,8 +48,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:05:42.965000-04:00",
-     "start_time": "2018-04-18T21:05:42.030Z"
+     "end_time": "2018-04-29T12:16:01.597000-04:00",
+     "start_time": "2018-04-29T16:16:00.654Z"
     }
    },
    "outputs": [],
@@ -62,8 +62,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:05:45.675000-04:00",
-     "start_time": "2018-04-18T21:05:42.386Z"
+     "end_time": "2018-04-29T12:16:04.160000-04:00",
+     "start_time": "2018-04-29T16:16:00.842Z"
     }
    },
    "outputs": [],
@@ -89,8 +89,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:05:46.004000-04:00",
-     "start_time": "2018-04-18T21:05:44.140Z"
+     "end_time": "2018-04-29T12:16:04.504000-04:00",
+     "start_time": "2018-04-29T16:16:04.040Z"
     }
    },
    "outputs": [],
@@ -115,8 +115,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:05:46.774000-04:00",
-     "start_time": "2018-04-18T21:05:44.288Z"
+     "end_time": "2018-04-29T12:16:05.366000-04:00",
+     "start_time": "2018-04-29T16:16:04.666Z"
     }
    },
    "outputs": [
@@ -137,11 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:10:01.093000-04:00",
-     "start_time": "2018-04-18T21:10:01.086Z"
+     "end_time": "2018-04-29T12:16:06.682000-04:00",
+     "start_time": "2018-04-29T16:16:06.514Z"
     }
    },
    "outputs": [
@@ -151,7 +151,7 @@
        "HilbertPath{3}(\"G\", \"A\", \"G\")"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,37 +163,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-18T17:11:16.986000-04:00",
      "start_time": "2018-04-18T21:11:16.682Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching *(::Tuple{String}, ::Tuple{String})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mMethodError: no method matching *(::Tuple{String}, ::Tuple{String})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1mpower_by_squaring\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Tuple{String}, ::Int64\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\intfuncs.jl:182\u001b[22m\u001b[22m",
-      " [2] \u001b[1mliteral_pow\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Base.#^, ::Tuple{String}, ::Type{Val{3}}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\intfuncs.jl:205\u001b[22m\u001b[22m",
-      " [3] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:10:21.524000-04:00",
-     "start_time": "2018-04-18T21:10:21.520Z"
+     "end_time": "2018-04-29T12:16:10.846000-04:00",
+     "start_time": "2018-04-29T16:16:10.704Z"
     }
    },
    "outputs": [
@@ -203,7 +189,7 @@
        "true"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,23 +200,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:09:59.755000-04:00",
-     "start_time": "2018-04-18T21:09:59.588Z"
+     "end_time": "2018-04-29T12:16:11.714000-04:00",
+     "start_time": "2018-04-29T16:16:11.494Z"
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Method definition (::"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Mbo.HilbertPath"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Type{Mbo.HilbertPath{N} where N})(String...) in module Mbo at C:\\work\\src\\Mbo\\src\\hilbert_path.jl:16 overwritten in module Main at In[8]:1.\n"
+     ]
     }
    ],
    "source": [
@@ -239,11 +239,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:08:24.890000-04:00",
-     "start_time": "2018-04-18T21:08:24.888Z"
+     "end_time": "2018-04-29T12:16:15.607000-04:00",
+     "start_time": "2018-04-29T16:16:15.446Z"
     }
    },
    "outputs": [
@@ -253,7 +253,7 @@
        "Tuple{String,String,String}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,28 +264,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:08:25.007000-04:00",
-     "start_time": "2018-04-18T21:08:25.004Z"
+     "end_time": "2018-04-29T12:16:16.903000-04:00",
+     "start_time": "2018-04-29T16:16:16.486Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "2 methods for generic function <b>HibertPath</b>:<ul><li> HibertPath<i>{N}</i>(args::<b>Tuple{Vararg{String,N}}...</b>) at In[11]:1</li> <li> HibertPath<i>{N}</i>(args::<b>Vararg{String,N}</b>) at In[22]:1</li> </ul>"
-      ],
-      "text/plain": [
-       "# 2 methods for generic function \"HibertPath\":\n",
-       "HibertPath(args::Tuple{Vararg{String,N}}...) where N in Main at In[11]:1\n",
-       "HibertPath(args::Vararg{String,N}) where N in Main at In[22]:1"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: HibertPath not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: HibertPath not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
+     ]
     }
    ],
    "source": [
@@ -294,23 +290,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:08:33.224000-04:00",
-     "start_time": "2018-04-18T21:08:33.056Z"
+     "end_time": "2018-04-29T12:16:21.121000-04:00",
+     "start_time": "2018-04-29T16:16:21.114Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: HibertPath not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: HibertPath not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:515\u001b[22m\u001b[22m"
+     ]
     }
    ],
    "source": [
@@ -394,11 +391,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:13:32.337000-04:00",
-     "start_time": "2018-04-10T02:13:32.002Z"
+     "end_time": "2018-04-29T12:16:32.775000-04:00",
+     "start_time": "2018-04-29T16:16:32.594Z"
     }
    },
    "outputs": [
@@ -408,7 +405,7 @@
        "true"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,11 +420,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:13:34.725000-04:00",
-     "start_time": "2018-04-10T02:13:34.544Z"
+     "end_time": "2018-04-29T12:16:34.519000-04:00",
+     "start_time": "2018-04-29T16:16:34.318Z"
     }
    },
    "outputs": [
@@ -437,7 +434,7 @@
        "1.0 - 0.0im"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:13:35.660000-04:00",
-     "start_time": "2018-04-10T02:13:35.294Z"
+     "end_time": "2018-04-29T12:16:38.075000-04:00",
+     "start_time": "2018-04-29T16:16:37.672Z"
     }
    },
    "outputs": [
@@ -462,7 +459,7 @@
        "true"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,11 +470,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T22:13:36.302000-04:00",
-     "start_time": "2018-04-10T02:13:36.096Z"
+     "end_time": "2018-04-29T12:16:39.669000-04:00",
+     "start_time": "2018-04-29T16:16:39.478Z"
     }
    },
    "outputs": [
@@ -487,7 +484,7 @@
        "true"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
